<resources>
    <string name="app_name">Pomoz</string>
    <string name="witaj">Witaj, </string>
    <string name="placeholder">placeholder</string>
    <string name="honorChipText">Żetony Honoru w tym miesiącu</string>
    <string name="tasks">zadania</string>
    <string name="_0">0</string>
    <string name="persons">Osoby</string>
    <string name="task">zadanie</string>
    <string name="description">opis</string>
    <string name="location">lokalizacja</string>
    <string name="available_tasks">Dostępne zadania</string>
    <string name="action_icon">Ikona czynności</string>
    <string name="searchAction">Szukaj czynności</string>
    <string name="logout">wyloguj</string>
    <string name="take_task">Przyjmij zadanie</string>
    <string name="send_message">Wyślij wiadomość</string>
    <string name="warningHeader">Masz nowe powiadomienie</string>
</resources>